<input type="color"> cannot select a color when NSAutomaticWindowAnimationsEnabled is false rdar://120544591 https://bugs.webkit.org/show_bug.cgi?id=266930

Reviewed by Aditya Keerthi and Lily Spiniolas.

There is somewhat surprising (but not solidly incorrect) AppKit behavior where,
with reduce motion enabled (which disables window and popover transitions),
NSPopoverColorWell will synchronously close its associated popover under setColor:,
*before* calling the control's action. We tear down our picker when the popover
closes, causing us to drop the color change on the floor when this happens.

To work around this, make invalidation asynchronous; by the next runloop,
the color has already been set and the system panel has already been presented,
just like in the non-reduce-motion case.

* Source/WebKit/UIProcess/mac/WebColorPickerMac.mm:
(-[WKPopoverColorWell popoverDidClose:]):
(-[WKColorPopoverMac didClosePopover]):
(-[WKColorPopoverMac windowWillClose:]):

Canonical link: https://commits.webkit.org/304030@main